added searchbar component

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
         <div class="header">
 
-            <div class="search-bar"></div>
+            <div class="search-bar">
+                <div class="search-icon">
+                    <img src="assets/magnify.svg" alt="">
+                </div>
+                <div class="search-input">
+                    <input type="text">
+                </div>
+            </div>
 
             <div class="profile-status-small">
                 <div class="notification-icon"></div>
