--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
             </div>
 
             <div class="profile-status-small">
-                <div class="notification-icon"></div>
+                <div class="notification-icon">
+                    <img src="assets/bell-ring-outline.svg" alt="">
+                </div>
                 <div class="profile-pic-small"></div>
                 <div class="profile-name-small">Morgan Oakley</div>
             </div>
 
             <div class="profile-status-large">
                 <div class="profile-pic-large"></div>
-                <div class="profile-name-large"><span class="greeting">Hi there,</span>Morgan Oakley (@morgan)</div>
+                <div class="profile-name-large"><span class="greeting">Hi there, <br></span>Morgan Oakley (@morgan)</div>
             </div>
 
             <div class="profile-btn">
