style the main-content cards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
             <div class="profile-status-large">
                 <div class="profile-pic-large"></div>
-                <div class="profile-name-large"><span class="greeting">Hi there, <br></span>Morgan Oakley (@morgan)</div>
+                <div class="profile-name-large"><span class="greeting">Hi there, <br></span>Morgan Oakley (@morgan)
+                </div>
             </div>
 
             <div class="profile-btn">
@@ -55,7 +56,7 @@
             <div class="nav-1">
 
                 <div class="home">
-                    
+
                     <div class="home-icon">
                         <img src="assets/home.svg" alt="">
                     </div>
@@ -200,7 +201,7 @@
 
                     <h4>Leetcode</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ipsam eaque saepe ab.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ipsam eaque saepe.
                     </p>
 
                 </div>
@@ -210,7 +211,7 @@
                     <h4>Work on XYZ Mobile APP</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla commodi quibusdam sed nisi alias
-                        labore, sit, obcaecati molestiae optio.
+                        labore, sit, obcaecati molestiae.
                     </p>
 
                 </div>
@@ -218,34 +219,41 @@
 
             </div>
 
-            <div class="widgets">
+            <div class="widgets-container">
 
                 <h3 id="custom-widgets">Custom widgets</h3>
 
+                <div class="widgets">
 
-                <div class="weather-widget">
-                    <div class="weather-icon"></div>
-                    <p>Weather</p>
-                </div>
+                    <div class="weather-widget">
+                        <div class="weather-img"></div>
+                        <p>Weather</p>
+                    </div>
 
-                <div class="time-widget">
-                    <div class="time-icon"></div>
-                    <p>Time tracking</p>
-                </div>
+                    <div class="time-widget">
+                        <div class="time-img"></div>
+                        <p>Time tracking</p>
+                    </div>
 
-                <div class="integration-widget">
-                    <div class="integration-icon"></div>
-                    <p>Integration with other apps</p>
-                </div>
+                    <div class="integration-widget">
+                        <div class="integration-img"></div>
+                        <p>Integration with other apps</p>
+                    </div>
 
-                <div class="calendar-widget">
-                    <div class="calendar-icon"></div>
-                    <p>Calendar View</p>
+                    <div class="calendar-widget">
+                        <div class="calendar-img"></div>
+                        <p>Calendar View</p>
+                    </div>
+
                 </div>
 
             </div>
 
         </div>
+
+    </div>
+
+    </div>
 
     </div>
 
