--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus adipisci magnam at autem,
                         eius voluptas expedita.
                     </p>
+                    
+                    <div class="modify">
+                        <div class="mark-icon"></div>
+                        <div class="edit-icon"></div>
+                        <div class="trash-icon"></div>
+                    </div>
                 </div>
 
                 <div class="card-2">
@@ -151,6 +157,11 @@
                         atque minima expedita tempore dignissimos molestias, esse adipisci itaque ipsa error tenetur rem
                         voluptates minus.
                     </p>
+                    <div class="modify">
+                        <div class="mark-icon"></div>
+                        <div class="edit-icon"></div>
+                        <div class="trash-icon"></div>
+                    </div>
                 </div>
 
                 <div class="card-3">
@@ -158,6 +169,11 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis provident.
                     </p>
+                    <div class="modify">
+                        <div class="mark-icon"></div>
+                        <div class="edit-icon"></div>
+                        <div class="trash-icon"></div>
+                    </div>
                 </div>
 
                 <div class="card-4">
@@ -166,6 +182,11 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo molestiae vel tempora perferendis
                         est inventore, velit officia quis alias recusandae, impedit corporis! Ducimus.
                     </p>
+                    <div class="modify">
+                        <div class="mark-icon"></div>
+                        <div class="edit-icon"></div>
+                        <div class="trash-icon"></div>
+                    </div>
                 </div>
 
                 <div class="card-5">
@@ -174,6 +195,11 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam fuga placeat doloremque
                         accusamus iste ipsam! Voluptate excepturi.
                     </p>
+                    <div class="modify">
+                        <div class="mark-icon"></div>
+                        <div class="edit-icon"></div>
+                        <div class="trash-icon"></div>
+                    </div>
                 </div>
 
                 <div class="card-6">
@@ -182,6 +208,11 @@
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque laudantium, amet, nisi eum iusto
                         fugiat, nihil repudiandae dolor voluptas sapiente saepe! Recusandae.
                     </p>
+                    <div class="modify">
+                        <div class="mark-icon"></div>
+                        <div class="edit-icon"></div>
+                        <div class="trash-icon"></div>
+                    </div>
                 </div>
 
             </div>
